# pfm-backend

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  test_login.html
src/: main.py
src/api/v1/: router.py
src/api/v1/routes/: conversations.py  messages.py  plans.py  players.py  users.py
src/core/: config.py  dependencies.py  lifespan.py  log.py  security.py
src/models/: __init__.py  conversations.py  messages.py  plans.py  players.py  users.py
src/prompts/: agent_prompt.yaml  llm_prompt.yaml  prompt.yaml
src/repositories/: __init__.py  conversation_repo.py  log_repo.py  message_repo.py  plan_repo.py  player_repo.py  user_repo.py
src/services/: agent_service.py  chat_service.py  llm_service.py
